# dammen

./: CMakeLists.txt  README.md  pngtocc.sh
src/: main.cc
src/blacksquare/: blacksquare.cc  blacksquare.hh  blacksquare.ih  do_clicked.cc  on_expose_event.cc  on_realize.cc  on_size_allocate.cc  on_size_request.cc  on_unrealize.cc
src/board/: board.cc  board.hh  board.ih  do_new.cc  do_open.cc  do_quit.cc  do_save.cc
src/evaluator/: balanced.cc  behind.cc  block.cc  boundary.cc  central.cc  compact.cc  countpieces.cc  endgame.cc  enemeally.cc  evaluate.cc  evaluator.hh  evaluator.ih  lock.cc  orphan.cc  printstatus.cc  queentrap.cc  tobepromoted.cc  toofar.cc
src/field/: cancapture.cc  canmove.cc  canqueencapture.cc  canqueenmove.cc  erase.cc  field.hh  field.ih  operatorassign.cc
src/game/: ai.cc  airec.cc  click.cc  game.cc  game.hh  game.ih  init.cc  log.cc  move.cc  moveresolver.cc  readlog.cc  tostring.cc  writelog.cc
src/images/: black.cc  blackqueen.cc  empty.cc  white.cc  whitequeen.cc  whitesquare.cc
src/map/: destroy.cc  fieldreach.cc  giver.cc  init.cc  map.hh  map.ih  operatorassign.cc
src/move/: add.cc  add2.cc  copy.cc  fixate.cc  flush.cc  flush2.cc  increment.cc  move.hh  move.ih  operatorassign.cc  operatorequals.cc
src/newgame/: do_cancel.cc  do_ok.cc  newgame.cc  newgame.hh  newgame.ih
src/setup/: findmoves.cc  init.cc  move.cc  moveai.cc  operatorassign.cc  setup.cc  setup.hh  setup.ih
src/whitesquare/: on_expose_event.cc  on_realize.cc  on_size_allocate.cc  on_size_request.cc  on_unrealize.cc  whitesquare.cc  whitesquare.hh  (+1 more)
